--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>RRS Tribute — Source</title>
-  <meta name="description" content="I know this is about as sappy as a song from Celine Dion, but just wanted you to know you're the inspiration for this journey into the IT world. Love you, old man. — Tyler" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="description" content="I know this is about as sappy as a song from Celine Dion, but just wanted you to know you're the inspiration for this journey into the IT world. Love you, old man. — Tyler">
   <style>
-    body { background: radial-gradient(1200px 600px at 20% 0%, #e6f0f7 0, #ffffff 60%); }
-    .matrix::before{
-      content: "";
-      position: fixed; inset:0; pointer-events:none; opacity:.15;
-      background:
-        linear-gradient(180deg, rgba(0,0,0,.05), rgba(0,0,0,0) 60%),
-        repeating-linear-gradient(90deg, rgba(2,132,199,.25) 0 1px, transparent 1px 12px);
-      mask-image: radial-gradient(circle at 50% 0%, black, transparent 65%);
-    }
-    code { font-feature-settings: "kern" off; }
+    :root{--navy:#001f5b;--gold:#c5b358;--ink:#1f2937;--muted:#6b7280;--bg:#f5f7fb}
+    html,body{margin:0;padding:0}
+    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:var(--ink)}
+    .wrap{max-width:880px;margin:40px auto;padding:0 16px}
+    .card{background:#fff;border:1px solid #e5e7eb;border-radius:14px;box-shadow:0 8px 24px rgba(0,0,0,.06);overflow:hidden}
+    .hd{background:var(--navy);color:var(--gold);padding:16px 18px;font-weight:700}
+    .inner{padding:18px}
+    .muted{color:var(--muted);font-size:14px}
+    pre{background:#0b1020;color:#cde3ff;border-radius:10px;padding:14px;overflow:auto;line-height:1.35}
+    code{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,monospace;font-size:13px}
+    .btn{display:inline-block;background:var(--navy);color:#fff;border:none;border-radius:10px;padding:10px 14px;font-weight:600;cursor:pointer}
+    .btn:disabled{opacity:.6;cursor:default}
+    .out{display:none;background:#eef6ff;border:1px solid #cfe3ff;border-radius:12px;padding:14px;margin:14px 0;color:#0b2a4a}
+    footer{color:#6b7280;font-size:12px;padding:10px 0}
   </style>
 </head>
-<body class="text-slate-800">
-  <div class="matrix"></div>
-  <main class="max-w-3xl mx-auto px-4 py-12">
-    <header class="mb-6">
-      <h1 class="text-2xl md:text-3xl font-extrabold text-sky-700">RRS Tribute — Source</h1>
-      <p class="text-sm text-slate-500">Scan delivered you here. Peek the code. Run to see output.</p>
-    </header>
+<body>
+  <div class="wrap">
+    <div class="card">
+      <div class="hd">RRS Tribute — Source</div>
+      <div class="inner">
+        <p class="muted">Scan delivered you here. Peek the code. Run to see output.</p>
 
-    <!-- Clarion‑style tribute code (disguised with Easter eggs) -->
-    <section class="rounded-xl border bg-white shadow p-4 md:p-6">
-      <pre class="overflow-auto"><code class="text-sm">! RRS Tribute — disguised as real code
+<pre><code>! RRS Tribute — disguised as real code
 PROGRAM
 MAP
   PrintTribute(),PROC
@@ -74,37 +74,30 @@ CODE
 
 PrintTribute PROCEDURE
 CODE
-  MESSAGE('RRS — Star Trek & Railroad legend. Married 1979.\n' & |
-          'HO scale forever; Big Boy ' & LocoBigBoy & ', UP ' & LocoUP844 & \
-          ', N&W ' & LocoNW611 & '.\n' & |
-          'P.S. I know this is about as sappy as a song from Celine Dion, ' & |
+  MESSAGE('RRS — Star Trek & Railroad legend. Married 1979.' & |
+          '\nHO scale forever; Big Boy ' & LocoBigBoy & ', UP ' & LocoUP844 & |
+          ', N&W ' & LocoNW611 & '.' & |
+          '\nP.S. I know this is about as sappy as a song from Celine Dion, ' & |
           'but just wanted you to know you\'re the inspiration for this journey into the IT world. ' & |
           'Love you, old man. — Tyler', 'Tribute')
-  RETURN
-</code></pre>
-      <div class="mt-4 flex gap-3">
-        <button id="runBtn" class="px-4 py-2 rounded-lg bg-sky-600 text-white hover:bg-sky-700">Run</button>
-        <span class="text-xs text-slate-500">(Simulated compile/run)</span>
-      </div>
-    </section>
+  RETURN</code></pre>
 
-    <!-- Output panel (revealed on Run) -->
-    <section id="out" class="hidden mt-6 rounded-xl border border-sky-100 bg-sky-50 p-4">
-      <h2 class="font-semibold text-sky-800 mb-2">Program Output</h2>
-      <pre class="text-sky-900 text-sm">RRS — Star Trek & Railroad legend. Married 1979.
-HO scale forever; Big Boy 4014, UP 844, N&W 611.
+        <button id="run" class="btn">Run</button>
+        <div id="out" class="out">
+          <strong>Program Output</strong>
+          <pre>RRS — Star Trek & Railroad legend. Married 1979.
+HO scale forever; Big Boy 4014, UP 844, N&amp;W 611.
 
 P.S. I know this is about as sappy as a song from Celine Dion, but just wanted you to know you're the inspiration for this journey into the IT world. Love you, old man. — Tyler</pre>
-    </section>
+        </div>
 
-    <footer class="mt-10 text-xs text-slate-400">
-      <p>Hidden in plain sight: DS9, NCC1701, UPRR, BNSF, CSX, NS, PENN, GRANDCEN, CHICAGO, 4014, 844, 611, HO (1:87).</p>
-    </footer>
-  </main>
-
+        <footer>Hidden in plain sight: DS9, NCC1701, UPRR, BNSF, CSX, NS, PENN, GRANDCEN, CHICAGO, 4014, 844, 611, HO (1:87).</footer>
+      </div>
+    </div>
+  </div>
   <script>
-    document.getElementById('runBtn').addEventListener('click', function(){
-      document.getElementById('out').classList.remove('hidden');
+    document.getElementById('run').addEventListener('click', function(){
+      document.getElementById('out').style.display='block';
       this.textContent = 'Ran ✔';
       this.disabled = true;
     });
